--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,9 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+	<meta property="og:image" content="%sveltekit.assets%/og-image.png" />
+	<meta name="twitter:image" content="%sveltekit.assets%/og-image.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
