--- a/src/app.html
+++ b/src/app.html
@@ -12,6 +12,9 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 	<meta name="apple-mobile-web-app-title" content="Pattyly" />
 	<link rel="apple-touch-icon" href="%sveltekit.assets%/icons/icon-192x192.png" />
+	<link rel="apple-touch-icon" sizes="192x192" href="%sveltekit.assets%/icons/icon-192x192.png" />
+	<link rel="apple-touch-icon" sizes="512x512" href="%sveltekit.assets%/icons/icon-512x512.png" />
+	<meta name="mobile-web-app-capable" content="yes" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
