fix: Safe areas iOS appliquées directement sur body
- Safe areas dans style inline du body pour priorité
- Variables CSS safe-area ajoutées dans :root pour usage futur
- Les safe areas sont maintenant appliquées directement

--- a/src/app.html
+++ b/src/app.html
@@ -22,7 +22,7 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover" style="min-height: 100vh; display: flex; flex-direction: column">
+<body data-sveltekit-preload-data="hover" style="min-height: 100vh; display: flex; flex-direction: column; padding-top: env(safe-area-inset-top); padding-bottom: env(safe-area-inset-bottom); padding-left: env(safe-area-inset-left); padding-right: env(safe-area-inset-right);">
 	<div style="display: contents">%sveltekit.body%</div>
 </body>
 
