--- a/src/app.html
+++ b/src/app.html
@@ -22,8 +22,7 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover"
-	style="min-height: 100vh; display: flex; flex-direction: column; padding-top: env(safe-area-inset-top); padding-bottom: env(safe-area-inset-bottom); padding-left: env(safe-area-inset-left); padding-right: env(safe-area-inset-right);">
+<body data-sveltekit-preload-data="hover" style="min-height: 100vh; display: flex; flex-direction: column">
 	<div style="display: contents">%sveltekit.body%</div>
 </body>
 
