--- a/src/app.html
+++ b/src/app.html
@@ -22,8 +22,8 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover" style="min-height: 100vh; display: flex; flex-direction: column">
-	<div style="display: contents">%sveltekit.body%</div>
+<body data-sveltekit-preload-data="hover">
+	<div class="app">%sveltekit.body%</div>
 </body>
 
 </html>
