--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.ico?v=2" />
 	<meta property="og:image" content="%sveltekit.assets%/og-image.png" />
 	<meta name="twitter:image" content="%sveltekit.assets%/og-image.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
